# tap-salesmate

./: .gitignore  README.md  pyproject.toml  tap-salesmate.sh  tox.ini
tap_salesmate/: client.py  streams.py  tap.py
tap_salesmate/tests/: __init__.py  test_core.py
