[tool.poetry]
name = "tap-salesmate"
version = "0.0.1"
description = "`tap-salesmate` is a Singer tap for salesmate, built with the Meltano SDK for Singer Taps."
authors = ["mechy X"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6"
requests = "^2.25.1"
singer-sdk = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-salesmate = 'tap_salesmate.tap:cli'
